--- a/app/src/main/res/layout/fragment_dream_detail.xml
+++ b/app/src/main/res/layout/fragment_dream_detail.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:text="@string/last_updated_date" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
@@ -42,14 +42,18 @@
                 android:id="@+id/fulfilled_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="50dp"
                 android:text="@string/text_Fulfilled" />
 
             <CheckBox
                 android:id="@+id/deferred_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="50dp"
                 android:text="@string/text_Deferred" />
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
